--- a/src/app/ideation/components/idea-reply/idea-reply.component.html
+++ b/src/app/ideation/components/idea-reply/idea-reply.component.html
@@ -164,10 +164,10 @@
         </div>
         <div class="footer_right">
           <button class="btn_ghost_reply_argument"
-            *ngIf="argument.id === argument.parent.id && !showReplies && argument.replies.rows.length"
+            *ngIf="argument.id === argument.parent.id && !showReplies && argument.children"
             id="{{argument.id}}_replies"
             [translate]="(wWidth > 560)? 'COMPONENTS.ARGUMENT.LNK_SHOW_REPLIES' : 'COMPONENTS.ARGUMENT.LNK_SHOW_REPLIES_MOBILE'"
-            [translateParams]="{count: (argument.replies.count)}" (click)="showReplies = !showReplies"></button>
+            [translateParams]="{count: (argument.children.length)}" (click)="showReplies = !showReplies"></button>
           <button class="btn_ghost_reply_argument" *ngIf="argument.id === argument.parent.id && showReplies"
             (click)="showReplies = !showReplies" translate="COMPONENTS.ARGUMENT.LNK_HIDE_REPLIES">
           </button>
@@ -189,7 +189,7 @@
               <div class="reply_referer">
               </div>
               <div class="reply_more" *ngIf="!last"></div>
-              <idea-reply [argument]="reply" [topicId]="topicId" [ideationId]="ideationId" [ideaId]="ideaId"
+              <idea-reply #replyItem [argument]="reply" [topicId]="topicId" [ideationId]="ideationId" [ideaId]="ideaId"
               [argument]="reply" [root]="argument" [showReplies]="showReplies"></idea-reply>
             </div>
           </ng-container>
@@ -200,7 +200,7 @@
               <div class="reply_referer">
               </div>
               <div class="reply_more" *ngIf="!last"></div>
-              <idea-reply [argument]="reply" [topicId]="topicId" [ideationId]="ideationId" [ideaId]="ideaId"
+              <idea-reply #replyItem [argument]="reply" [topicId]="topicId" [ideationId]="ideationId" [ideaId]="ideaId"
               [argument]="reply" [root]="argument" [showReplies]="showReplies"></idea-reply>
             </div>
           </ng-container>
