--- a/src/app/topic/components/topic-vote-cast/topic-vote-cast.component.scss
+++ b/src/app/topic/components/topic-vote-cast/topic-vote-cast.component.scss
@@ -95,10 +95,12 @@
       display: flex;
       flex-direction: column;
       padding: 12px 16px;
-      background-color: var(--color-argument-pro-medium);
       border-radius: 8px;
       gap: 16px;
 
+      @include mixins.mobile {
+        padding: 0;
+      }
       .line_separator {
         background-color: var(--color-voting-disabled);
       }
