--- a/src/app/topic/components/topic-arguments/topic-arguments.component.html
+++ b/src/app/topic/components/topic-arguments/topic-arguments.component.html
@@ -80,8 +80,8 @@
     <div class="arguments_content">
       <div class="discussion_info_text_wrap" *ngIf="hasDiscussionEndedExpired(discussion)">
         <div class="text_area">
-          <div class="bold" translate="COMPONENTS.TOPIC_IDEATION.HEADING_IDEATION_ENDED"></div>
-          <div translate="COMPONENTS.TOPIC_IDEATION.TXT_IDEATION_ENDED"></div>
+          <div class="bold" translate="COMPONENTS.TOPIC_ARGUMENTS.HEADING_DISCUSSION_ENDED"></div>
+          <div translate="COMPONENTS.TOPIC_ARGUMENTS.TXT_DISCUSSION_ENDED"></div>
         </div>
       </div>
       <ng-container *ngIf="arguments$ | async as arguments">
