--- a/src/app/ideation/components/idea-reply/idea-reply.component.html
+++ b/src/app/ideation/components/idea-reply/idea-reply.component.html
@@ -164,12 +164,12 @@
         </div>
         <div class="footer_right">
           <button class="btn_ghost_reply_argument"
-            *ngIf="argument.id === argument.parent.id && !showReplies && argument.children"
+            *ngIf="argument.id === argument.parent.id && !argument.showReplies && argument.children"
             id="{{argument.id}}_replies"
             [translate]="(wWidth > 560)? 'COMPONENTS.ARGUMENT.LNK_SHOW_REPLIES' : 'COMPONENTS.ARGUMENT.LNK_SHOW_REPLIES_MOBILE'"
-            [translateParams]="{count: (argument.children.length)}" (click)="showReplies = !showReplies"></button>
-          <button class="btn_ghost_reply_argument" *ngIf="argument.id === argument.parent.id && showReplies"
-            (click)="showReplies = !showReplies" translate="COMPONENTS.ARGUMENT.LNK_HIDE_REPLIES">
+            [translateParams]="{count: (argument.children.length)}" (click)="argument.showReplies = !argument.showReplies"></button>
+          <button class="btn_ghost_reply_argument" *ngIf="argument.id === argument.parent.id && argument.showReplies"
+            (click)="argument.showReplies = !argument.showReplies" translate="COMPONENTS.ARGUMENT.LNK_HIDE_REPLIES">
           </button>
           <ng-container *ngIf="Auth.loggedIn$ | async">
             <a class="mobile_show" translate="COMPONENTS.ARGUMENT.BTN_REPLY" (click)="showReply=!showReply"></a>
@@ -179,9 +179,9 @@
         </div>
       </div>
     </div>
-    <idea-reply-form *ngIf="showReply" [(showReply)]="showReply" [(showReplies)]="showReplies" [argument]="argument"
+    <idea-reply-form *ngIf="showReply" [(showReply)]="showReply" [argument]="argument"
       [topicId]="topicId" [ideationId]="ideationId" [ideaId]="ideaId"></idea-reply-form>
-    <ng-container *ngIf="showReplies">
+    <ng-container *ngIf="argument.showReplies">
       <div class="replies_wrap" [ngClass]="argument.type">
         <ng-container *ngIf="!argument.children">
           <ng-container *ngFor="let reply of argument.replies.rows; let last = last">
@@ -190,7 +190,7 @@
               </div>
               <div class="reply_more" *ngIf="!last"></div>
               <idea-reply #replyItem [argument]="reply" [topicId]="topicId" [ideationId]="ideationId" [ideaId]="ideaId"
-              [argument]="reply" [root]="argument" [showReplies]="showReplies"></idea-reply>
+              [argument]="reply" [root]="argument"></idea-reply>
             </div>
           </ng-container>
         </ng-container>
@@ -201,7 +201,7 @@
               </div>
               <div class="reply_more" *ngIf="!last"></div>
               <idea-reply #replyItem [argument]="reply" [topicId]="topicId" [ideationId]="ideationId" [ideaId]="ideaId"
-              [argument]="reply" [root]="argument" [showReplies]="showReplies"></idea-reply>
+              [argument]="reply" [root]="argument"></idea-reply>
             </div>
           </ng-container>
         </ng-container>
