--- a/src/app/ideation/components/idea/idea-dialog.component.html
+++ b/src/app/ideation/components/idea/idea-dialog.component.html
@@ -246,7 +246,7 @@
           <div class="description" [innerHTML]="idea.description"></div>
         </div>
         <ng-container *ngIf="folders$ | async as folders">
-          <div class="idea_folders_wrap">
+          <div class="idea_folders_wrap" *ngIf="folders.length">
             <div class="icon">
               <svg width="24" height="20" viewBox="0 0 24 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_13361_96404)">
