--- a/src/app/ideation/components/idea/idea-dialog.component.html
+++ b/src/app/ideation/components/idea/idea-dialog.component.html
@@ -357,10 +357,10 @@
             <div class="like_counter_wrap" [innerHTML]="idea.votes.up.count"></div>
           </!--button-->
           <div class="buttons_wrap">
-            <button class="btn_ghost_reply_idea" *ngIf="!showReplies && replyCount" id="{{idea.id}}_replies"
+            <button class="btn_ghost_reply_idea" *ngIf="!showReplies && idea.replies.count" id="{{idea.id}}_replies"
               [translate]="(wWidth > 560)? 'COMPONENTS.ARGUMENT.LNK_SHOW_REPLIES' : 'COMPONENTS.ARGUMENT.LNK_SHOW_REPLIES_MOBILE'"
               [translateParams]="{count: (idea.replies.count)}" (click)="showReplies = !showReplies"></button>
-            <button class="btn_ghost_reply_idea" *ngIf="showReplies" (click)="showReplies = !showReplies"
+            <button class="btn_ghost_reply_idea" *ngIf="showReplies && idea.replies.count" (click)="showReplies = !showReplies"
               translate="COMPONENTS.ARGUMENT.LNK_HIDE_REPLIES">
             </button>
             <button *ngIf="!showReply" class="btn_small_submit bold" (click)="showReply = true"
