--- a/src/app/topic/components/argument-reactions/argument-reactions.component.scss
+++ b/src/app/topic/components/argument-reactions/argument-reactions.component.scss
@@ -1,3 +1,22 @@
+@use "mixins";
+
+@include mixins.mobile {
+  .row_list {
+    flex-direction: row;
+    align-items: center;
+    padding: 0;
+
+    .row_cell {
+      flex-direction: row;
+      align-items: center;
+      gap: 16px;
+      &:last-child {
+        border-top:none;
+      }
+    }
+  }
+}
+
 .row_list {
   width: 100%;
   justify-content: space-between;
