--- a/src/styles.scss
+++ b/src/styles.scss
@@ -228,6 +228,11 @@ activity {
   }
 }
 
+public-group-box {
+  @include mixins.mobile {
+    width: 100%;
+  }
+}
 input,
 .dropdown,
 textarea {
@@ -677,7 +682,7 @@ html {
     display: flex;
     flex-direction: column;
     gap: 16px;
-    padding:32px;
+    padding: 32px;
     position: relative;
   }
 
@@ -739,7 +744,11 @@ html {
     width: 100%;
     justify-content: center;
     z-index: 3;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0.00) 0%, rgba(255, 255, 255, 0.90) 100%);
+    background: linear-gradient(
+      180deg,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 0.9) 100%
+    );
     height: 144px;
 
     &.open {
@@ -758,7 +767,7 @@ html {
       position: absolute;
       bottom: 16px;
       width: calc(100% - 48px);
-      box-shadow: 0px 8px 20px 0px rgba(220, 231, 240, 0.30);
+      box-shadow: 0px 8px 20px 0px rgba(220, 231, 240, 0.3);
       path {
         fill: none;
       }
@@ -1374,7 +1383,6 @@ tour-item-template {
   border-radius: 16px;
   margin-bottom: 20px;
 
-
   .ideation_header {
     display: flex;
     width: 100%;
@@ -1424,7 +1432,6 @@ tour-item-template {
       gap: 8px;
     }
   }
-
 }
 .vote_wrap {
   background-color: var(--color-argument-pro-light);
@@ -1798,15 +1805,15 @@ tour-item-template {
 
   .editor-statusbar {
     position: absolute;
-    top:0;
-    right:0;
+    top: 0;
+    right: 0;
     font-size: 12px;
     line-height: 16px;
 
     .charCounter {
       font-size: 12px;
       line-height: 16px;
-      color: #727C84;
+      color: #727c84;
     }
   }
   @include mixins.mobile {
