--- a/src/assets/styles/_buttons_new.scss
+++ b/src/assets/styles/_buttons_new.scss
@@ -258,6 +258,10 @@ $button-styles: (
   }
 }
 
+.like_active {
+  background-color: var(--color-ideation-disabled);
+}
+
 .radio_wrap {
   display: flex;
   flex-direction: row;
